--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@ Bootstrap 5 HTML CSS Template
 
                         <div class="col-lg-6 col-12">
                             <form class="custom-form hero-form" action="#" method="get" role="form">
-                                <h3 class="text-white mb-3">Search your dream job</h3>
+                                <h3 class="text-white mb-3">Find Your Next Role, Fast</h3>
 
                                 <div class="row">
                                     <div class="col-lg-6 col-md-6 col-12">
@@ -306,9 +306,9 @@ Bootstrap 5 HTML CSS Template
 
                                 <div class="job-body d-flex flex-wrap flex-auto align-items-center ms-4">
                                     <div class="mb-3">
-                                        <h4 class="job-title mb-lg-0">
+                                        <h2 class="job-title mb-lg-0">
                                             <a href="job-details.html" class="job-title-link">Technical Lead</a>
-                                        </h4>
+                                        </h2>
 
                                         <div class="d-flex flex-wrap align-items-center">
                                             <p class="job-location mb-0">
@@ -351,9 +351,9 @@ Bootstrap 5 HTML CSS Template
 
                                 <div class="job-body d-flex flex-wrap flex-auto align-items-center ms-4">
                                     <div class="mb-3">
-                                        <h4 class="job-title mb-lg-0">
+                                        <h2 class="job-title mb-lg-0">
                                             <a href="job-details.html" class="job-title-link">Business Director</a>
-                                        </h4>
+                                        </h2>
 
                                         <div class="d-flex flex-wrap align-items-center">
                                             <p class="job-location mb-0">
@@ -396,9 +396,9 @@ Bootstrap 5 HTML CSS Template
 
                                 <div class="job-body d-flex flex-wrap flex-auto align-items-center ms-4">
                                     <div class="mb-3">
-                                        <h4 class="job-title mb-lg-0">
+                                        <h2 class="job-title mb-lg-0">
                                             <a href="job-details.html" class="job-title-link">HR Manager</a>
-                                        </h4>
+                                        </h2>
 
                                         <div class="d-flex flex-wrap align-items-center">
                                             <p class="job-location mb-0">
@@ -441,9 +441,9 @@ Bootstrap 5 HTML CSS Template
 
                                 <div class="job-body d-flex flex-wrap flex-auto align-items-center ms-4">
                                     <div class="mb-3">
-                                        <h4 class="job-title mb-lg-0">
+                                        <h2 class="job-title mb-lg-0">
                                             <a href="job-details.html" class="job-title-link">Dev Ops</a>
-                                        </h4>
+                                        </h2>
 
                                         <div class="d-flex flex-wrap align-items-center">
                                             <p class="job-location mb-0">
@@ -486,9 +486,9 @@ Bootstrap 5 HTML CSS Template
 
                                 <div class="job-body d-flex flex-wrap flex-auto align-items-center ms-4">
                                     <div class="mb-3">
-                                        <h4 class="job-title mb-lg-0">
+                                        <h2 class="job-title mb-lg-0">
                                             <a href="job-details.html" class="job-title-link">UX Designer</a>
-                                        </h4>
+                                        </h2>
 
                                         <div class="d-flex flex-wrap align-items-center">
                                             <p class="job-location mb-0">
